Fixes modal bug on iOS Safari

--- a/app/css/modal.styl
+++ b/app/css/modal.styl
@@ -50,6 +50,8 @@ html {
   height: 100%;
   margin: 0;
   -webkit-overflow-scrolling: touch;
+  width: 1px;
+  min-width: 100%;
 }
 
 .double {
@@ -658,7 +660,6 @@ i {
 }
 
 #merchant-desc {
-  white-space: pre;
   text-overflow: ellipsis;
   overflow: hidden;
   opacity: 0.8;
